misc4.0/externalDNS/router.yaml
---
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  name: ${namespace}
spec:
  domain: ${namespace}.${cluster_base_domain}
