misc4.0/externalDNS/sharded-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: external-dns
  annotations:
    route-type: global
  labels:
    route-type: global
    router: ${router}  
spec:
  host: external.apps.global.sandbox1459.opentlc.com
  to:
    kind: Service
    name: external-dns
